@@ -1,2 +1,2 @@
-__version__ = '0.4.4'
+__version__ = '0.4.5'
 
