@@ -1,4 +1,5 @@
 from .base import Autographed, Identified, Labeled, Message
+from .sync import Signed
 
 from uuid import uuid4
 
@@ -152,4 +153,95 @@ class LabelInterest(Labeled):
 
 class LabelIgnore(Labeled):
     pass
+
+
+class GetHistory(Labeled):
+    START_SIZE = 1 # bytes
+    COUNT_SIZE = 1 # bytes
+
+    def __init__(self, label, start=0, count=5):
+        Labeled.__init__(self, label)
+        self.start = start
+        self.count = count
+
+    def _str_(self):
+        return ', '.join([
+            Labeled._str_(self),
+            f'start={self.start}',
+            f'count={self.count}',
+        ])
+
+    def to_bytes(self, handler):
+        label = Labeled.to_bytes(self, handler)
+
+        start = self.start
+        assert start >= 0 and start < 256**self.START_SIZE
+        start = start.to_bytes(self.START_SIZE, handler.BYTE_ORDER)
+
+        count = self.count
+        assert count > 0 and count < 256**self.COUNT_SIZE
+        count = count.to_bytes(self.COUNT_SIZE, handler.BYTE_ORDER)
+
+        return label + start + count
+
+    @classmethod
+    def recv(cls, handler):
+        label = cls._label_(handler)
+        if label is None: return None
+
+        start = cls._start_(handler)
+        if start is None: return None
+
+        count = cls._count_(handler)
+        if count is None: return None
+
+        return cls(label, start, count)
+
+    @classmethod
+    def _start_(cls, handler):
+        start = handler.recv_bytes(cls.START_SIZE)
+        if start is None: return None
+        return int.from_bytes(start, handler.BYTE_ORDER)
+
+    @classmethod
+    def _count_(cls, handler):
+        count = handler.recv_bytes(cls.COUNT_SIZE)
+        if count is None: return None
+        return int.from_bytes(count, handler.BYTE_ORDER)
+
+
+class History(GetHistory):
+    def __init__(self, label, start, items):
+        GetHistory.__init__(self, label, start, len(items))
+        self.items = items
+
+    def to_bytes(self, handler):
+        label_start_count = GetHistory.to_bytes(self, handler)
+        assert self.count == len(self.items)
+
+        items = b''
+        for signed in self.items:
+            assert isinstance(signed, Signed)
+            items += signed.to_bytes(handler)
+
+        return label_start_count + items
+
+    @classmethod
+    def recv(cls, handler):
+        label = cls._label_(handler)
+        if label is None: return None
+
+        start = cls._start_(handler)
+        if start is None: return None
+
+        count = cls._count_(handler)
+        if count is None: return None
+
+        items = [ ]
+        for i in range(count):
+            item = Signed.recv(handler)
+            if item is None: return None
+            items.append(item)
+
+        return cls(label, start, items)
 
