@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
 @%@~LICENSE:MIT~@%@
 
+saw_071022_1 - Remove command-line peer commands. Add GetHistory/History.
+
 saw_070922_4 - Fix signature verification for previous commit.
 
 saw_070922_3 - Add alias option for peer sign-on.
